2004-09-12  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_create_pattern):
	Pickup repeat setting when cloning surface.
	(_cairo_glitz_surface_create_pattern): cairo_surface_set_repeat
	likes to get a cairo_surface_t pointer not a cairo_glitz_surface_t
	pointer.
	(_cairo_glitz_surface_set_image): Get pixel masks from pixman image
	format.

2004-09-11  Carl Worth  <stacyworth@pippin.local>

	* autogen.sh: Require automake 1.6 rather than 1.7 since it seems
	to work just fine.

2004-09-11  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require version 0.2.2 of glitz.

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_create_pattern): 
	0.5 should no longer be added to gradient stop coordinates.

	* src/cairo.h: CAIRO_HAS_GL_SURFACE -> CAIRO_HAS_GLITZ_SURFACE.
	cairo_set_target_gl -> cairo_set_target_glitz.
	cairo_gl_surface_create -> cairo_glitz_surface_create.

	* src/cairo-features.h.in: GL_SURFACE_FEATURE -> GLITZ_SURFACE_FEATURE.

	* src/Makefile.am: CAIRO_HAS_GL_SURFACE -> CAIRO_HAS_GLITZ_SURFACE,
	libcairo_gl_sources -> libcairo_glitz_sources, cairo_gl_surface.c ->
	cairo_glitz_surface.c, GL_CFLAGS -> GLITZ_CFLAGS and
	GL_LIBS -> GLITZ_LIBS.

	* cairo.pc.in (Requires): GL_REQUIRES -> GLITZ_REQUIRES.

	* configure.in: Replaced the gl backend with the new glitz backend.
	Cairo now requires version 0.2.1 of glitz.

2004-09-04  Carl Worth  <cworth@brudder.east.isi.edu>

	* COPYING:
	* COPYING-MPL-1.1: 
	* COPYING-LGPL-2.1:
	* src/cairo-features.h.in:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairo_color.c:
	* src/cairo_fixed.c:
	* src/cairo_font.c:
	* src/cairo_gstate.c:
	* src/cairo_hull.c:
	* src/cairo_image_surface.c:
	* src/cairo_matrix.c:
	* src/cairo_path.c:
	* src/cairo_path_bounds.c:
	* src/cairo_path_fill.c:
	* src/cairo_path_stroke.c:
	* src/cairo_pen.c:
	* src/cairo_polygon.c:
	* src/cairo_ps_surface.c:
	* src/cairo_slope.c:
	* src/cairo_spline.c:
	* src/cairo_surface.c:
	* src/cairo_xcb_surface.c: